Refactoring to leverage Java 17 and avoid deprecated classes